--- a/css/custom.css
+++ b/css/custom.css
@@ -4,5 +4,29 @@
 	Add all your Custom Styled CSS here for New Styles or
 	Overwriting Default Theme Styles for Better Handling Updates
 -----------------------------------------------------------------*/
+.whatsapp-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366;
+  /* WhatsApp green */
+  color: white;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+  z-index: 1000;
+  /* Ensure it stays on top */
+}
 
+.whatsapp-button:hover {
+  background-color: #1ebe57;
+}
 
+.whatsapp-button i {
+  font-size: 24px;
+}
